[gd_scene load_steps=18 format=3 uid="uid://ce61kpweab77u"]

[ext_resource type="Script" uid="uid://dqervw2ux7u7" path="res://EXP (Experimental Stuff)/EXP Scripts/Celestia/celestia.gd" id="1_55sdg"]
[ext_resource type="Texture2D" uid="uid://b3pw83omr71ww" path="res://Assets/PC Pictures/dyspraxia_body.png" id="2_da8me"]
[ext_resource type="Texture2D" uid="uid://c28n25rgvn2x4" path="res://Assets/PC Pictures/stick1.png" id="2_lrbdl"]
[ext_resource type="Texture2D" uid="uid://cywrtb7sp4ygn" path="res://Assets/PC Pictures/d_upper_right_arm.png" id="3_nvo4m"]
[ext_resource type="Script" uid="uid://c764c8cq48hb7" path="res://EXP (Experimental Stuff)/EXP Scripts/Celestia/exp_c_sword.gd" id="3_r13uh"]
[ext_resource type="Texture2D" uid="uid://dpk7cidvthrjm" path="res://Assets/PC Pictures/right_hand.png" id="4_3hmvt"]
[ext_resource type="Script" uid="uid://dscgvmi7owpsf" path="res://EXP (Experimental Stuff)/EXP Scripts/Celestia/exp_c_blade.gd" id="4_6s2yu"]
[ext_resource type="Texture2D" uid="uid://cn2ako2466gvt" path="res://Assets/PC Pictures/d_lower_right_arm.png" id="5_llwpt"]
[ext_resource type="Texture2D" uid="uid://v1355rel58ny" path="res://Assets/PC Pictures/d_upper_left_arm.png" id="6_0x1h6"]
[ext_resource type="Texture2D" uid="uid://dk7bc7k0dy2tb" path="res://Assets/PC Pictures/pin.png" id="8_dclej"]
[ext_resource type="Texture2D" uid="uid://bst24gxd110ah" path="res://Assets/PC Pictures/left_hand.png" id="9_pwsn2"]
[ext_resource type="Texture2D" uid="uid://ccntot51tqaet" path="res://Assets/PC Pictures/dyspraxia_upper_right_arm.png" id="10_pwsn2"]
[ext_resource type="Texture2D" uid="uid://dwh4exra4pehj" path="res://Assets/PC Pictures/sword.png" id="10_yx6nn"]
[ext_resource type="Script" uid="uid://b2vkyghlp7s0m" path="res://EXP (Experimental Stuff)/EXP Scripts/Celestia/sword_stick.gd" id="12_6wh8i"]
[ext_resource type="Texture2D" uid="uid://bwo7xsph7pbfg" path="res://Assets/PC Pictures/stick2.png" id="12_56tte"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1rcr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gctc5"]
radius = 7.07107

[node name="ExpCelestia" type="CharacterBody2D"]
collision_mask = 49
script = ExtResource("1_55sdg")

[node name="Model" type="Node2D" parent="."]

[node name="BodyStick" type="Sprite2D" parent="Model"]
position = Vector2(0, 200)
rotation = 1.5708
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_lrbdl")

[node name="Body" type="Sprite2D" parent="Model"]
position = Vector2(5, -25)
rotation = -0.0349066
scale = Vector2(0.11791, 0.11791)
texture = ExtResource("2_da8me")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-112, 96, -108, 97, -101, 97, -91, 95, -83, 91, -74, 85, -65, 75, -60, 67, -55, 56, -53, 48, -53, 35, -52, 24, -51, 6, -51, -11, -50, -24, -49, -37, -49, -52, -48, -62, -44, -74, -35, -91, -21, -104, -25, -114, -27, -132, -27, -143, -11, -147, 4, -148, 27, -144, 27, -128, 24, -114, 21, -103, 31, -97, 40, -89, 47, -76, 50, -63, 52, -33, 53, 9, 55, 53, 61, 71, 68, 81, 80, 91, 97, 99, 110, 102, -111, 98)

[node name="RightArm" type="Node2D" parent="."]
position = Vector2(40, -90)

[node name="UpperRightArm" type="RigidBody2D" parent="RightArm"]
position = Vector2(40, 0)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/UpperRightArm"]
scale = Vector2(1, 5)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/UpperRightArm"]
rotation = -0.0261799
scale = Vector2(0.12, 0.12)
texture = ExtResource("3_nvo4m")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/UpperRightArm"]
position = Vector2(0, -40)
node_a = NodePath("..")
node_b = NodePath("../../..")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/UpperRightArm/PinJoint2D"]
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="RightHand" type="RigidBody2D" parent="RightArm"]
position = Vector2(-30, 0)
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/RightHand"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/RightHand"]
position = Vector2(-3, 0)
rotation = 3.33358
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_3hmvt")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/RightHand"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("../../LowerRightArm")

[node name="LowerRightArm" type="RigidBody2D" parent="RightArm"]
position = Vector2(30, 0)
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArm/LowerRightArm"]
scale = Vector2(1, 6)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/LowerRightArm"]
position = Vector2(2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("5_llwpt")

[node name="PinJoint2D" type="PinJoint2D" parent="RightArm/LowerRightArm"]
position = Vector2(0, -50)
node_a = NodePath("..")
node_b = NodePath("../../UpperRightArm")

[node name="Sprite2D" type="Sprite2D" parent="RightArm/LowerRightArm/PinJoint2D"]
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="Sprite2D2" type="Sprite2D" parent="RightArm/LowerRightArm/PinJoint2D"]
position = Vector2(0.000221252, 100)
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="LeftArm1" type="Node2D" parent="."]
position = Vector2(-40, -90)
rotation = 3.14159

[node name="UpperLeftArm" type="RigidBody2D" parent="LeftArm1"]
position = Vector2(40, 0)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm1/UpperLeftArm"]
scale = Vector2(1, 5)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm1/UpperLeftArm"]
position = Vector2(2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("6_0x1h6")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm1/UpperLeftArm"]
position = Vector2(0, -40)
node_a = NodePath("..")
node_b = NodePath("../../..")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm1/UpperLeftArm/PinJoint2D"]
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="Sword" type="Node2D" parent="."]
position = Vector2(0, -90)

[node name="Handle" type="CharacterBody2D" parent="Sword"]
collision_layer = 0
collision_mask = 0
script = ExtResource("3_r13uh")

[node name="SwordStick" type="Sprite2D" parent="Sword/Handle"]
z_index = -2
rotation = 1.5708
scale = Vector2(0.36, 0.12)
texture = ExtResource("12_56tte")
offset = Vector2(850, 59)
script = ExtResource("12_6wh8i")

[node name="LeftPin" type="PinJoint2D" parent="Sword/Handle"]
node_a = NodePath("..")
node_b = NodePath("../../../LeftArm2/LeftHand")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Handle/LeftPin"]
rotation = 1.57079
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="RightPin" type="PinJoint2D" parent="Sword/Handle"]
node_a = NodePath("..")
node_b = NodePath("../../../RightArm/RightHand")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Handle/RightPin"]
rotation = 1.57079
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/Handle"]
shape = SubResource("CircleShape2D_gctc5")

[node name="Blade" type="CharacterBody2D" parent="Sword"]
rotation = 1.5708
collision_layer = 4
collision_mask = 12
script = ExtResource("4_6s2yu")

[node name="SwordStick" type="Sprite2D" parent="Sword/Blade"]
z_index = -2
position = Vector2(200, 5)
rotation = -0.0872665
scale = Vector2(0.36, 0.12)
texture = ExtResource("12_56tte")
offset = Vector2(850, 59)
script = ExtResource("12_6wh8i")

[node name="Sprite2D" type="Sprite2D" parent="Sword/Blade"]
position = Vector2(110, 0)
rotation = -1.5708
scale = Vector2(0.12, 0.12)
texture = ExtResource("10_yx6nn")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Sword/Blade"]
position = Vector2(111, 0)
polygon = PackedVector2Array(-79, 12.9999, -79, -11.0001, 93, -8.00074, 116, 3.99918, 95.0001, 14.9993)

[node name="LeftArm2" type="Node2D" parent="."]

[node name="LeftHand" type="RigidBody2D" parent="LeftArm2"]
position = Vector2(-10, -90)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm2/LeftHand"]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LeftHand"]
position = Vector2(-1, 0)
rotation = 3.31613
scale = Vector2(0.12, 0.12)
texture = ExtResource("9_pwsn2")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm2/LeftHand"]
position = Vector2(0, -10)
node_a = NodePath("..")
node_b = NodePath("../../LowerLeftArm")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LeftHand/PinJoint2D"]
position = Vector2(0, 20)
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="LowerLeftArm" type="RigidBody2D" parent="LeftArm2"]
position = Vector2(-70, -90)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArm2/LowerLeftArm"]
scale = Vector2(1, 6)
shape = SubResource("RectangleShape2D_e1rcr")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LowerLeftArm"]
position = Vector2(-2, 0)
scale = Vector2(0.12, 0.12)
texture = ExtResource("10_pwsn2")

[node name="PinJoint2D" type="PinJoint2D" parent="LeftArm2/LowerLeftArm"]
position = Vector2(0, -50)
node_a = NodePath("..")
node_b = NodePath("../../../LeftArm1/UpperLeftArm")

[node name="Sprite2D" type="Sprite2D" parent="LeftArm2/LowerLeftArm/PinJoint2D"]
position = Vector2(-0.000221252, 100)
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="Sprite2D2" type="Sprite2D" parent="LeftArm2/LowerLeftArm/PinJoint2D"]
rotation = 3.14159
scale = Vector2(0.12, 0.12)
texture = ExtResource("8_dclej")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 264

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PackedVector2Array(-112, 96, -108, 97, -101, 97, -91, 95, -83, 91, -74, 85, -65, 75, -60, 67, -55, 56, -53, 48, -53, 35, -52, 24, -51, 6, -51, -11, -50, -24, -49, -37, -49, -52, -48, -62, -44, -74, -35, -91, -21, -104, -25, -114, -27, -132, -27, -143, -11, -147, 4, -148, 27, -144, 27, -128, 24, -114, 21, -103, 31, -97, 40, -89, 47, -76, 50, -63, 52, -33, 53, 9, 55, 53, 61, 71, 68, 81, 80, 91, 97, 99, 110, 102, -111, 98)

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
